tests/errors/contractViolation.milo
// @error: requires clause 'x >= 0.0' violated

from "std/math" import { mathSqrt }

fn main(): i32 {
    let r = mathSqrt(-1.0)
    return 0
}
